--- a/hearttalk/hearttalk/Assets/Localization/ru.lproj/Localizable.strings
+++ b/hearttalk/hearttalk/Assets/Localization/ru.lproj/Localizable.strings
@@ -1,7 +1,17 @@
 
-"defaultMode" = "Обычные карточки";
+"defaultPacks" = "Обычные паки";
+
+"simple" = "Обычные";
 
 "couples" = "Для парочек";
+
+"close" = "Близкие";
+
+"closer" = "Очень близкие";
+
+"closest" = "Самые близкие";
+
+"18+" = "18+";
 
 "family" = "Семейные";
 
@@ -9,11 +19,17 @@
 
 "created" = "Созданные";
 
+"unsorted" = "Несортированные";
+
 "generateAction" = "Сгенерировать";
 
 "cards" = "карточек";
 
 "card" = "карточка";
+
+"packs" = "паки";
+
+"pack" = "пак";
 
 "goBack" = "Назад";
 
@@ -32,6 +48,8 @@
 "contact" = "Связаться с нами";
 
 "credential" = "Руслан Парастаев";
+
+"checkOut" = "Посмотри!!!";
 
 "version" = "версия";
 
