--- a/hearttalk/hearttalk/Assets/Localization/ru.lproj/Localizable.strings
+++ b/hearttalk/hearttalk/Assets/Localization/ru.lproj/Localizable.strings
@@ -3,23 +3,49 @@
 
 "simple" = "Обычные";
 
+"simpleDesc" = "Начните лёгкие и значимые разговоры. Идеально подходит для тех, кто хочет укрепить свои отношения.";
+
 "couples" = "Для парочек";
 
 "close" = "Близкие";
 
+"closeDesc" = "Этот пак подойдет для пар, которые только вошли в отношения или планируют это сделать.";
+
 "closer" = "Очень близкие";
+
+"closerDesc" = "Этот пак подойдет для пар, которые только вошли в отношения или менее года в них.";
 
 "closest" = "Самые близкие";
 
+"closestDesc" = "Этот пак подойдет для пар, которые более года в отношениях.";
+
 "18+" = "18+";
 
+"adultAlertTitle" = "Проверка возраста";
+
+"adultAlertMessage" = "Вы должны быть не моложе 18 лет, чтобы получить доступ к этому контенту. Пожалуйста, подтвердите свой возраст.";
+
+"confirm" = "Подтвердить";
+
+"taboo" = "Табу";
+
+"tabooDesc" = "Разрушайте границы запретных тем с дерзкими вопросами, которые бросают вызов нормам и открывают смелые разговоры.";
+
+"sex" = "Секс";
+
+"sexDesc" = "Изучите интимную сторону ваших отношений с откровенными вопросами о сексе, желаниях и близости в романтических отношениях.";
+
 "family" = "Семейные";
+
+"familyDesc" = "Сближайтесь с семьёй через вопросы, которые вызывают смех, понимание и углубляют связи между поколениями.";
 
 "favorites" = "Избранные";
 
 "created" = "Созданные";
 
 "unsorted" = "Несортированные";
+
+"unsortedDesc" = "Твои карточки, которые не распределенны в паки.";
 
 "generateAction" = "Сгенерировать";
 
