fix: Context menu fix

--- a/hearttalk/hearttalk/Assets/Localization/en.lproj/Localizable.strings
+++ b/hearttalk/hearttalk/Assets/Localization/en.lproj/Localizable.strings
@@ -122,3 +122,7 @@
 "perfect" = "You are perfect!";
 
 "empty" = "empty";
+
+"description" = "Description";
+
+"descriptionPlaceholder" = "Your created pack.";
