--- a/hearttalk/hearttalk/Assets/Localization/ru.lproj/Localizable.strings
+++ b/hearttalk/hearttalk/Assets/Localization/ru.lproj/Localizable.strings
@@ -122,3 +122,7 @@
 "perfect" = "Ты великолепен!";
 
 "empty" = "пусто";
+
+"description" = "Описание";
+
+"descriptionPlaceholder" = "Твой созданный набор.";
