feat: Choosing color for created pack, choosing pack where to create card

--- a/hearttalk/hearttalk/Assets/Localization/en.lproj/Localizable.strings
+++ b/hearttalk/hearttalk/Assets/Localization/en.lproj/Localizable.strings
@@ -17,6 +17,10 @@
 
 "closest" = "Closest";
 
+"to" = "To";
+
+"color" = "Color";
+
 "closestDesc" = "This pack is a good choice for relationship that belongs more than a year.";
 
 "18+" = "18+";
