--- a/hearttalk/hearttalk/Assets/Localization/ru.lproj/Localizable.strings
+++ b/hearttalk/hearttalk/Assets/Localization/ru.lproj/Localizable.strings
@@ -17,6 +17,10 @@
 
 "closest" = "Самые близкие";
 
+"to" = "В";
+
+"color" = "Цвет";
+
 "closestDesc" = "Этот пак подойдет для пар, которые более года в отношениях.";
 
 "18+" = "18+";
