feat: Removing notes icon if no notes, title for new screens

--- a/hearttalk/hearttalk/Assets/Localization/en.lproj/Localizable.strings
+++ b/hearttalk/hearttalk/Assets/Localization/en.lproj/Localizable.strings
@@ -132,3 +132,7 @@
 "descriptionPlaceholder" = "Your created pack.";
 
 "notePlaceholder" = "Write your note";
+
+"notes" = "Notes";
+
+"createNote" = "Create note";
