--- a/hearttalk/hearttalk/Assets/Localization/ru.lproj/Localizable.strings
+++ b/hearttalk/hearttalk/Assets/Localization/ru.lproj/Localizable.strings
@@ -132,3 +132,7 @@
 "descriptionPlaceholder" = "Твой созданный набор.";
 
 "notePlaceholder" = "Напиши записку";
+
+"notes" = "Записки";
+
+"createNote" = "Создать запуску";
