feat: Settings page with language changing and togglers

--- a/hearttalk/hearttalk/Assets/Localization/en.lproj/Localizable.strings
+++ b/hearttalk/hearttalk/Assets/Localization/en.lproj/Localizable.strings
@@ -136,3 +136,17 @@
 "notes" = "Notes";
 
 "createNote" = "Create note";
+
+"settings" = "Settings";
+
+"vibrations" = "Vibrations";
+
+"sounds" = "Sounds";
+
+"packActionSheetTitle" = "Select a pack";
+
+"packActionSheetMessage" = "This card will be added to selected pack.";
+
+"languageActionSheetTitle" = "Select language";
+
+"languageActionSheetMessage" = "We will delete all data!";
