feat: Added sound effects for clicks and sliding

--- a/hearttalk/hearttalk/Assets/Localization/en.lproj/Localizable.strings
+++ b/hearttalk/hearttalk/Assets/Localization/en.lproj/Localizable.strings
@@ -143,6 +143,8 @@
 
 "sounds" = "Sounds";
 
+"dailyCard" = "Daily card";
+
 "packActionSheetTitle" = "Select a pack";
 
 "packActionSheetMessage" = "This card will be added to selected pack.";
