feat: Added widgets and fix for changing language

--- a/hearttalk/hearttalk/Assets/Localization/en.lproj/Localizable.strings
+++ b/hearttalk/hearttalk/Assets/Localization/en.lproj/Localizable.strings
@@ -152,3 +152,7 @@
 "languageActionSheetTitle" = "Select language";
 
 "languageActionSheetMessage" = "We will delete all data!";
+
+"dailyWidgetPlaceholder" = "Who are you?";
+
+"dailyWidgetNoCard" = "No card for today";
