--- a/hearttalk/hearttalk/Assets/Localization/ru.lproj/Localizable.strings
+++ b/hearttalk/hearttalk/Assets/Localization/ru.lproj/Localizable.strings
@@ -158,3 +158,11 @@
 "dailyWidgetNoCard" = "Сегодня нет карточки";
 
 "darkMode" = "Темная тема";
+
+"alert" = "Предупреждение";
+
+"alertCard" = "Вопрос должен состоять из минимум 10 символов";
+
+"alertPack" = "Название набора должено состоять из минимум 4 символов";
+
+"alertNote" = "Записка должена состоять из минимум 10 символов";
