--- a/hearttalk/hearttalk/Assets/Localization/ru.lproj/Localizable.strings
+++ b/hearttalk/hearttalk/Assets/Localization/ru.lproj/Localizable.strings
@@ -119,6 +119,10 @@
 
 "deleting" = "Вы собираетесь удалить все данные";
 
+"deletingCard" = "Вы собираетесь удалить карточку";
+
+"deletingNote" = "Вы собираетесь удалить записку";
+
 "delete" = "Удалить";
 
 "cancel" = "Отмена";
