--- a/hearttalk/hearttalk/Assets/Localization/ru.lproj/Localizable.strings
+++ b/hearttalk/hearttalk/Assets/Localization/ru.lproj/Localizable.strings
@@ -117,7 +117,7 @@
 
 "whatIs4Name" = "Приложение также включает продвинутый искусственный интеллект, который генерирует индивидуальные вопросы на основе запросов пользователя. Этот персонализированный подход позволяет пользователям исследовать темы, особенно актуальные для их собственных переживаний и интересов, что ещё больше улучшает качество их бесед.";
 
-"deleting" = "Вы собираетесь удалить все данные";
+"deleting" = "Вы собираетесь удалить все данные после перезагрузки";
 
 "deletingCard" = "Вы собираетесь удалить карточку";
 
@@ -155,7 +155,7 @@
 
 "languageActionSheetTitle" = "Выберите язык";
 
-"languageActionSheetMessage" = "Мы удалим все данные!";
+"languageActionSheetMessage" = "Твои паки привязаны к выбранному языку.";
 
 "dailyWidgetPlaceholder" = "Кто ты?";
 
