feat: Actions for home screen quick actions

--- a/hearttalk/hearttalk/Assets/Localization/en.lproj/Localizable.strings
+++ b/hearttalk/hearttalk/Assets/Localization/en.lproj/Localizable.strings
@@ -170,3 +170,11 @@
 "alertPack" = "Pack name should be more than 4 characters";
 
 "alertNote" = "Note should be more than 10 characters";
+
+"addCard" = "Add card";
+
+"addPack" = "Add pack";
+
+"addCardSub" = "Add a new card";
+
+"addPackSub" = "Add a new pack";
