--- a/hearttalk/hearttalk/Assets/Localization/ru.lproj/Localizable.strings
+++ b/hearttalk/hearttalk/Assets/Localization/ru.lproj/Localizable.strings
@@ -170,3 +170,12 @@
 "alertPack" = "Название набора должено состоять из минимум 4 символов";
 
 "alertNote" = "Записка должена состоять из минимум 10 символов";
+
+"addCard" = "Создать карточку";
+
+"addPack" = "Создать пак";
+
+"addCardSub" = "Создать новую карточку";
+
+"addPackSub" = "Создать новый пак";
+
